@@ -1,3 +1,9 @@
+2020-11-26  Nick Clifton  <nickc@redhat.com>
+
+	PR 26946
+	* dwarf2.c (read_section): Check for debug sections with excessive
+	sizes.
+
 2020-11-23  Nick Clifton  <nickc@redhat.com>
 
 	PR 26931
